--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,9 @@ es_minor_version: 15.2-1
 es_cluster_name: dev-cluster
 es_data_path: /data/elasticsearch
 es_log_path: /var/log/elasticsearch
+es_user: elasticsearch
+es_group: elasticsearch
 
 es_heap_size: 1g
+es_start_service: true
+es_restart_on_change: true
