--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,10 +1,29 @@
 ---
+- name: Create others directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    owner: "{{ es_user }}"
+    group: "{{ es_group }}"
+    mode: 0770
+  with_items:
+    - "{{ es_data_path }}"
+    - "{{ es_log_path }}"
+
 - name: Set elasticsearch.yml
   ansible.builtin.template:
     src: elasticsearch.yml.j2
     dest: /etc/elasticsearch/elasticsearch.yml
+    owner: root
+    group: "{{ es_group }}"
+    mode: 0644
+  notify: restart elasticsearch
 
 - name: Set jvm.options
   ansible.builtin.template:
     src: jvm.options.j2
     dest: /etc/elasticsearch/jvm.options
+    owner: root
+    group: elasticsearch
+    mode: 0644
+  notify: restart elasticsearch
