--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,8 +2,10 @@
 # handlers file for elasticsearch
 
 - name: restart elasticsearch
-  become: yes
-  ansible.builtin.service: name=elasticsearch state=restarted enabled=yes
+  ansible.builtin.service:
+    name: elasticsearch
+    state: restarted
+    enabled: true
   when:
     - es_restart_on_change
     - es_start_service
