--- a/tasks/upgrade.yml
+++ b/tasks/upgrade.yml
@@ -1,15 +1,22 @@
 ---
-- name: Ensure elasticsearch already present
+- name: Ensure Elastic is present
   ansible.builtin.service:
-    name: name=elasticsearch state=started
+    name: elasticsearch
+    state: started
 
-- name: ensure elasticsearch is up and available
+- name: Ensure Elastic is running
   ansible.builtin.wait_for:
     host: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
     port: 9200
     delay: 5
 
-- name: Perform upgrade process as root
+- name: Check if upgraded version is already installed
+  ansible.builtin.package:
+    list: "elasticsearch-{{ es_upgrade_version }}.x86_64"
+  register: installed_es_version
+
+
+- name: Perform upgrade process
   block:
     - name: Disable shard allocation
       ansible.builtin.uri:
@@ -17,7 +24,7 @@
         body: '{"persistent":{"cluster.routing.allocation.enable":"primaries"}}' # specify no shard allocation
         body_format: json
         method: PUT
-      
+
     - name: Stop non essential indexing to speed up shard recovery
       ansible.builtin.uri:
         url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200/_flush/synced"
@@ -29,23 +36,30 @@
         url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200"
       register: pre_upgrade_cluster_info
 
-    - name: Shut down node
+    - name: Stop Elastic
       ansible.builtin.service:
-        name: name=elasticsearch state=stopped
+        name: elasticsearch
+        state: stopped
+      when: es_upgrade_version
 
-    - name: Upgrade node
+    - name: Upgrade Elastic
       ansible.builtin.package:
         name: "elasticsearch-{{ es_upgrade_version }}.x86_64"
         state: present
 
-    - name: bring up node
+    - name: Start Elastic
       ansible.builtin.service:
-        name: name=elasticsearch state=started
-      notify: wait for elasticsearch to start
+        name: elasticsearch
+        state: started
 
-    - meta: flush_handlers
+    - name: Ensure Elastic instance is working
+      ansible.builtin.uri:
+        url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200"
+        status_code: 200
+      retries: 3
+      delay: 10
 
-    - name: validate it joins cluster
+    - name: Validate instance joins the cluster
       ansible.builtin.uri:
         url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200"
       register: post_upgrade_cluster_info
@@ -53,21 +67,21 @@
       retries: 3
       delay: 10
 
-    - name: reenable shard allocation
+    - name: Enable shard allocation
       ansible.builtin.uri: 
         url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200/_cluster/settings"
         body: '{"persistent":{"cluster.routing.allocation.enable":null}}' 
         body_format: json
         method: PUT
 
-    - name: Wait for elasticsearch to recover
+    - name: Wait for Elastic to recover
       ansible.builtin.uri:
         url: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:9200/_cat/health"
         method: GET
         return_content: yes
         status_code: 200
-        body_format: json
       register: result
-      until: result | search('green')
+      until: result | regex_search('green')
       retries: 10
       delay: 30
+  when: installed_es_version.results | selectattr("yumstate", "equalto", "installed") | list | length == 0
