--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,3 +17,4 @@
   ansible.builtin.package:
     name: "elasticsearch-{{ es_major_version }}.{{ es_minor_version }}.x86_64"
     state: present
+  when: es_upgrade == false
